(lang dune 3.19)

(name luma)

(generate_opam_files true)

(source
 (github stevenjmoe/luma))
(authors "Steven")
(maintainers "Steven")

(package
 (name luma)
 (synopsis "Does this need to exist?")
 (description "Does this need to exist?")
 (depends 
   (alcotest :with-test) 
   containers
   dune
   fmt
   logs
   luv
   lwt
   lwt_ppx
   ocaml 
   ppxlib
   ppx_inline_test
   (raylib (>= 1.4.0))
   (raygui (>= 1.4.0))
   ptime
   fmt
   uuidm
   yojson
   js_of_ocaml
   js_of_ocaml-ppx
   js_of_ocaml-lwt)
 (tags
  ("game engine" "ecs")))

(map_workspace_root false)
