(library
 (name luma)
 (public_name luma)
 (libraries 
   raylib
   containers
   luma.app
   luma.asset
   luma.driver
   luma.driver.raylib
   luma.ecs
   luma.plugin
   luma.sprite
   luma.time
   luma.transform
   luma.image
   luma.render
   luma.input
   luma.types
   ppx_component)
 (preprocess 
   (pps ppx_inline_test ppx_assert)))
