(library
 (name luma)
 (public_name luma)
 (libraries 
   raylib
   containers
   luma.core
   luma.app
   luma.asset
   luma.audio
   luma.driver
   luma.driver.raylib
   luma.ecs
   luma.plugin
   luma.window
   luma.sprite
   luma.state
   luma.time
   luma.transform
   luma.image
   luma.render
   luma.input
   luma.types
   ppx_component
   fmt.tty)
 (preprocess 
   (pps ppx_inline_test ppx_assert)))
