(library
 (name luma)
 (public_name luma)
 (libraries 
   raylib
   containers
   luma.core
   luma.app
   luma.asset
   luma.audio
   luma.driver
   luma.ecs
   luma.plugin
   luma.window
   luma.scene
   luma.sprite
   luma.state
   luma.storage
   luma.time
   luma.transform
   luma.image
   luma.render
   luma.input
   luma.types
   luma.ui
   luma.task_queue
   luma.serialize
   ppx_component
   fmt.tty)
 (preprocess 
   (pps ppx_inline_test ppx_assert)))
