(library 
  (public_name luma.ecs)
  (name luma__ecs)
  (libraries 
    raylib 
    luma.asset
    luma.storage 
    luma.image 
    luma.texture 
    luma.resource
    luma.id
    lwt
    ppx_component)
  (modules 
    App 
    Archetype
    Component 
    Components 
    Query 
    Resources 
    Scheduler 
    System 
    World)
  (preprocess 
   (pps ppx_inline_test ppx_assert ppx_component)))
