(library 
  (public_name luma.ecs)
  (name luma__ecs)
  (libraries 
    raylib 
    luma.storage 
    luma.resource
    luma.id
    lwt
    ppx_component)
  (modules 
    Archetype
    Component 
    Query 
    Scheduler 
    System 
    World)
  (preprocess 
   (pps ppx_inline_test ppx_assert ppx_component)))
