(library 
  (public_name luma.ecs)
  (name luma__ecs)
  (libraries 
    luma.storage 
    luma.resource
    luma.id
    luma.core
    lwt
    ppx_component)
  (modules 
    Archetype
    Component 
    Query 
    Scheduler 
    System 
    World)
  (preprocess 
   (pps ppx_inline_test ppx_assert ppx_component)))
