(library
  (public_name luma.plugin)
  (libraries 
    luma.app 
    luma.audio
    luma.driver 
    luma.render 
    luma.time 
    luma.asset 
    luma.window 
    luma.input
    luma.sprite
    luma.type_register
    luma.transform
    luma.debug)
  (name luma__plugin)
  (preprocess 
   (pps ppx_assert)))
